--- a/client/components/cards/style/CartItems.css
+++ b/client/components/cards/style/CartItems.css
@@ -28,3 +28,35 @@
     display: inline-block;
     margin-left: 20px;
 }
+.remove-btn {
+    padding-top: 60px;
+    width: 100%;
+    text-align: center;
+}
+
+.remove-button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 10px 22px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+
+.remove-button {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #f44336;
+}
+
+.remove-button:hover {
+    background-color: #f44336;
+    color: white;
+}
