--- a/client/components/cards/style/CartItems.css
+++ b/client/components/cards/style/CartItems.css
@@ -9,6 +9,8 @@
 }
 .container-ships-price {
     width: 20%;
+    height: 100%;
+    margin: 20px auto;
     display: inline-block;
     text-align: center;
 }
@@ -16,6 +18,7 @@
     width: 20%;
     display: inline-block;
     text-align: center;
+    
 
 }
 .container-ships-img {
@@ -59,4 +62,9 @@
 .remove-button:hover {
     background-color: #f44336;
     color: white;
+}
+.quanatity-input {
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
 }
