--- a/client/components/cards/style/CartItems.css
+++ b/client/components/cards/style/CartItems.css
@@ -1,4 +1,55 @@
-.container-ships {
+.CartItems-container {
+    width: 100%;
+    height: 130px;
+  
+}
+
+.CartItems-pic-info {
+    width: 50%;
+    height: 90%;
+
+    display: inline-block;
+}
+.cartitems-picture {
+    width: 30%;
+    height: 100%;
+    display: inline-block;
+}
+.caritem-info {
+    width: 70%;
+    display: inline-block;
+}
+.cartitems-picture img {
+    width: auto;
+    height: 100%;
+    display: inline-block;
+}
+
+.cartItem-price {
+    width: 30%;
+    /* height: 90%; */
+
+    display: inline-block;
+    text-align: center;
+}
+.cartItem-quantity {
+    width: 20%;
+
+    display: inline-block;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* .container-ships {
     width: 100%;
     height: 130px;
 }
@@ -18,14 +69,13 @@
     width: 20%;
     display: inline-block;
     text-align: center;
-    
 
 }
 .container-ships-img {
     width: 30%;
     display: inline-block;
-   
 }
+
 .container-ships-info {
     width: 50%;
     display: inline-block;
@@ -35,10 +85,10 @@
     padding-top: 60px;
     width: 100%;
     text-align: center;
-}
+} */
 
-.remove-button {
-    background-color: #4CAF50; /* Green */
+/* .remove-button {
+    background-color: #4CAF50;
     border: none;
     color: white;
     padding: 10px 22px;
@@ -47,7 +97,7 @@
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
-    -webkit-transition-duration: 0.4s; /* Safari */
+    -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
     cursor: pointer;
 }
@@ -67,4 +117,4 @@
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
-}
+} */
