--- a/client/components/cards/style/shipCard.css
+++ b/client/components/cards/style/shipCard.css
@@ -1,46 +1,42 @@
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 30%;
-    height: 100px;;
-    border-radius: 5px;
-    display: inline-block;
-}
-
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-img {
-    border-radius: 5px 5px 0 0;
-    width: 100%;
-    height: 100%;
-}
-
-.container {
-    padding: 2px 16px;
-}
 
 .card-holder {
-	width: 100%;
+    width: 100%;
+    text-align: center
+}
+.card {
+    width: 30%;
+    height: 500px;
+    display: inline-block;
+    margin: 20px 20px 20px 20px;
+}
+
+.shipName {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
 }
 
-.img-container {
-    width: 100%
+.img-holder {
+    width: 100%;
+    height: 60%;
+    text-align: center;
+}
+
+.img-holder img {
+    width: auto;
+    height: 100%;
+}
+.ship-info {
+    text-align: center
 }
 .center {
     text-align: center;
 }
-.add-to-cart {
-
-}
 
 .button {
-    background-color: lightgreen; /* Green */
+    background-color: blue; /* Green */
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 10px 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -51,7 +47,7 @@ img {
     transition-duration: 0.4s;
 }
 
-
 .button2:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+    background-color: lightblue;
 }
