--- a/client/components/cards/style/CartItems.css
+++ b/client/components/cards/style/CartItems.css
@@ -20,7 +20,7 @@
     display: inline-block;
 }
 .cartitems-picture img {
-    width: auto;
+    width: 100%;
     height: 100%;
     display: inline-block;
 }
