--- a/client/components/style/singleShip.css
+++ b/client/components/style/singleShip.css
@@ -1,7 +1,7 @@
 .single-ship-container {
     width: 100%;
     height: 350px;
-    /* background-color: aqua; */
+    background-color: aqua;
     margin: 30px auto;
 }
 
@@ -45,7 +45,7 @@
 .statement {
     width: 20%;
     text-align: end;
-    
+
 }
 .ship-fact {
     width: 60%;
