--- a/client/components/style/homePage.css
+++ b/client/components/style/homePage.css
@@ -1,5 +1,5 @@
 p{
-  color: black;
+  color: white;
   font-size: 30px;
   text-align: center;
 }
@@ -8,12 +8,25 @@ p{
   background: black;
 } */
 
-h3{
+.product-title{
+  color: white;
   text-align: center;
   font-size: 50px;
 }
 
-h5{
+.description-product{
+  color: white;
   font-size: 40px;
 }
 
+.view-all{
+  font: bold 21px Arial;
+  text-decoration: none;
+  background-color: blue;
+  color: white;
+  padding: 2px 6px 2px 6px;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+}
