clear storage update and fixed one styling

--- a/client/components/style/homePage.css
+++ b/client/components/style/homePage.css
@@ -19,6 +19,11 @@ p{
   font-size: 40px;
 }
 
+.featured-title{
+  color: white;
+  font-size:30px;
+}
+
 .view-all{
   font: bold 21px Arial;
   text-decoration: none;
